Use common ServiceConfiguration helper methods consistently.